# Edge-API-Service-SATECHO

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements-dev.txt
iam/application/: services.py
iam/domain/: entities.py  services.py
iam/infrastructure/: models.py  repositories.py
iam/interfaces/: services.py
pir/application/: services.py
pir/domain/: entities.py  services.py
pir/infrastructure/: models.py  mqtt_publisher.py  repositories.py
pir/interfaces/: services.py
shared/infrastructure/: actuator_command_subscriber.py  cloud_client.py  database.py  device_ingest_subscriiber.py  device_tracker.py  heartbeat_service.py  mqtt_client.py  retry_queue.py  sync_client.py  sync_service.py
soil/application/: services.py
soil/domain/: entities.py  services.py
soil/infrastructure/: models.py  mqtt_publisher.py  repositories.py
soil/interfaces/: services.py
tests/: conftest.py
tests/application/: test_soil_reading_application_service.py
tests/domain/: test_pir_classification_service.py  test_soil_reading_service.py
tests/infrastructure/: test_actuator_command_subscriber.py  test_device_ingest_subscriber.py  test_device_tracker.py  test_pir_sync.py
tests/interfaces/: test_iam_api.py  test_soil_api.py
