[project]
name = "edge"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0",
    "peewee>=3.17",
    "paho-mqtt>=2.1",
    "requests>=2.32",
    "python-dateutil>=2.9",
]

[tool.setuptools]
packages = ["iam", "iam.application", "iam.domain", "iam.infrastructure", "iam.interfaces", "pir", "pir.application", "pir.domain", "pir.infrastructure", "pir.interfaces", "shared", "shared.infrastructure", "soil", "soil.application", "soil.domain", "soil.infrastructure", "soil.interfaces"]
